# dashboard-indicadores-ibge

./: LICENSE  pyproject.toml
src/: exemplo.py  main.py  notebook.ipynb
static/: IPCA-serie-histórica.csv  custo-medio-m2-em-moeda-corrente.csv  rendimento-medio-mensal-real-trabalhadores.csv
